--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any" /> -->
+  <!-- <link rel="alternate icon" href="/favicon.ico" /> -->
   <title>Invozone</title>
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-  <link rel="alternate icon" href="/favicon.ico" />
+ 
 
 </head>
 
